minor code clean up.